name:                HiLanguage
version:             0.1.0.0
synopsis:            Synopsis for Hi language
description:         REPL with small language call HI

homepage:            https://github.com/Sdmitrioul/HiLanguage
license:             MIT
license-file:        LICENSE
author:              Dmitri Skroba
maintainer:          dmitri.zd1958@gmail.com
copyright:           2022 Dmitri Skroba

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:
          HW3.Action
          HW3.Base
          HW3.Evaluator
          HW3.Helpers
          HW3.Parser
          HW3.Pretty
  ghc-options:         -Wall
  build-depends:
            base >= 4.9 && < 5
            , bytestring
            , ListLike
            , containers
            , directory
            , haskeline
            , megaparsec
            , mtl
            , parser-combinators
            , prettyprinter
            , prettyprinter-ansi-terminal
            , random
            , scientific
            , serialise
            , text
            , time
            , transformers
            , zlib
  default-language:    Haskell2010

executable HiLanguage
  main-is: Main.hs
  other-modules:
      Paths_HiLanguage
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers
    , haskeline
    , HiLanguage
    , megaparsec
    , prettyprinter
    , prettyprinter-ansi-terminal
    , text
  default-language: Haskell2010
